# opencl_0

./: CMakeLists.txt  main.cpp  ocl_src.cl
ocl_src/: ocl_src.cl
src/: decor.hpp  factories.hpp  iters.hpp  main.cpp  ocl.cpp  ocl.hpp  ocl_src.cl  raytrace.hpp
